fix button overlapping

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,8 +22,9 @@ h1 {
   padding: 1rem 3rem;
   word-wrap: break-word;
 }
-.bsg, .gg{
-display: none;
+.bsg,
+.gg {
+  display: none;
 }
 .tsg_title {
   text-shadow: 2px 2px 4px #005cc8ff;
@@ -187,7 +188,7 @@ textarea {
   display: block;
   width: 100%;
   height: 6px;
-  top:50%;
+  top: 50%;
   border-radius: 3px;
   background-color: #fff;
   margin: 8px 0;
@@ -206,7 +207,10 @@ textarea {
   opacity: 0;
   transition: all 0.5s ease 0s;
 }
-
+nav{
+  width: fit-content;
+  margin: auto;
+}
 ul {
   padding: 0;
 }
@@ -252,14 +256,36 @@ li {
     overflow: hidden;
     opacity: 1;
     transform: scaleY(1);
-    margin-top: 6rem;
+    margin-top: 4rem;
     transition: all 0.5s ease 0s;
   }
   nav {
     opacity: 0;
     transform: scaleY(0.01);
-    margin-top: -15rem;
+    margin-top: -11rem;
     transition: all 0.5s ease 0s;
+  }
+
+  #btn_mode,
+  #btn_burger {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+  }
+  #btn_burger span,
+  #btn_burger:before,
+  #btn_burger:after {
+    width: 80%;
+    height: 3px;
+    margin: 8px auto;
+  }
+  #btn_burger.active:before {
+    transform: rotate(45deg) translate(8px, 8px);
+  }
+  #btn_burger.active:after {
+    transform: rotate(-45deg) translate(8px, -8px);
   }
 }
 @media (min-width: 992px) {
@@ -286,7 +312,7 @@ li {
   nav {
     opacity: 0;
     transform: scaleY(0.01);
-    margin-top: -6rem;
+    margin-top: -3rem;
     transition: all 0.5s ease 0s;
   }
 }
